@startuml
class Car {
- String _id
- String _model
- String _brand
+ String getId()
+ String getModel()
+ String getBrand()
}

class CarRepository {
- List<Car> _carsDb
+ Car getCarById(String)
+ List<Car> getAllCars()
}

class CarFormatter {
+ Car getCarsNames(List<Car>)
}

class CarBest {
+ Car getBestCar()
}

CarBest --> CarRepository :Uses
CarFormatter --> CarRepository : Uses
@enduml